--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@angular-nestjs-vite/source",
+  "name": "@client/source",
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
@@ -35,6 +35,7 @@
     "zone.js": "^0.14.2"
   },
   "devDependencies": {
+    "@analogjs/platform": "^0.2.29",
     "@angular-devkit/core": "^17.0.3",
     "@angular-devkit/schematics": "^17.0.0",
     "@nitedani/angular-renderer-core": "^17.0.10",
@@ -67,4 +68,3 @@
     "node": "20.10.0"
   }
 }
-
