--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "type": "module",
   "private": true,
   "dependencies": {
+    "@analogjs/content": "^0.2.29",
+    "@analogjs/router": "^0.2.29",
     "@angular/animations": "^17.0.4",
     "@angular/common": "^17.0.4",
     "@angular/compiler": "^17.0.4",
@@ -36,8 +38,10 @@
   },
   "devDependencies": {
     "@analogjs/platform": "^0.2.29",
+    "@analogjs/vite-plugin-angular": "^0.2.29",
     "@angular-devkit/core": "^17.0.3",
     "@angular-devkit/schematics": "^17.0.0",
+    "@nestjs/testing": "^10.3.0",
     "@nitedani/angular-renderer-core": "^17.0.10",
     "@nitedani/angular-renderer-express": "^17.0.10",
     "@nitedani/angular-renderer-nestjs": "^17.0.10",
