--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "test": "nx test",
     "lint": "nx lint"
   },
-  "engines": {
-    "node": "20.10.0"
-  },
-  "type": "module",
   "private": true,
   "dependencies": {
     "@analogjs/content": "^0.2.29",
@@ -31,13 +27,19 @@
     "@nx/angular": "^17.2.0",
     "@nx/jest": "^17.2.0",
     "@types/jest": "^29.5.10",
+    "front-matter": "^4.0.2",
     "jest": "^29.7.0",
+    "marked": "^5.0.2",
+    "marked-gfm-heading-id": "^3.1.0",
+    "marked-highlight": "^2.0.1",
+    "mermaid": "^10.2.4",
+    "prismjs": "^1.29.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
     "zone.js": "^0.14.2"
   },
   "devDependencies": {
-    "@analogjs/platform": "^0.2.29",
+    "@analogjs/platform": "^0.2.0",
     "@analogjs/vite-plugin-angular": "^0.2.29",
     "@angular-devkit/core": "^17.0.3",
     "@angular-devkit/schematics": "^17.0.0",
@@ -55,12 +57,13 @@
     "@playwright/test": "^1.36.0",
     "@types/express": "^4.17.17",
     "cross-env": "^7.0.3",
+    "jsdom": "^22.0.0",
     "nx": "^17.2.0",
     "sass": "^1.66.1",
     "typescript": "5.2.2",
     "vavite": "^3.0.0",
     "vite": "^5.0.0",
-    "vite-tsconfig-paths": "^3.6.0",
+    "vite-tsconfig-paths": "^4.2.0",
     "vitest": "^0.34.6"
   },
   "overrides": {
